# RetinaTag

./: .gitignore  CHANGELOG.md  download_models.ps1  package-lock.json  package.json  process_logo.ps1
.github/workflows/: release.yml
docs/: SYNC_PROTOCOL.md
release-tools/: check_list_private_bug.py  check_migration_v1175.py  check_orig_path.py  check_thumb_state.py  check_v1158_migration.py  check_v1159_state.py  cleanup_dead_vault_rows.py  health_v1114.ps1  install_v1114.ps1  install_v1115.ps1  install_v1116.ps1  install_v1117.ps1  install_v1118.ps1  install_v1119.ps1  install_v1120.ps1  install_v1121.ps1  install_v1122.ps1  install_v1123.ps1  install_v1124.ps1  install_v1125.ps1  install_v1126.ps1  install_v1127.ps1  install_v1128.ps1  install_v1129.ps1  install_v1130.ps1  install_v1131.ps1  install_v1132.ps1  install_v1133.ps1  install_v1134.ps1  install_v1135.ps1  install_v1136.ps1  install_v1137.ps1  install_v1138.ps1  install_v1139.ps1  install_v1140.ps1  install_v1141.ps1  install_v1142.ps1  install_v1143.ps1  install_v1144.ps1  install_v1145.ps1  (+57 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: nsis-hooks.nsh
src-tauri/src/: clip.rs  clip_tokenizer.rs  commands.rs  db.rs  device_monitor.rs  dictionary_tr.tsv  exif_reader.rs  export.rs  face.rs  lib.rs  main.rs  models.rs  mtp.rs  providers.rs  quality.rs  router.rs  scanner.rs  sync.rs  tagger.rs  thumbnail.rs  tray.rs  vault_biometric.rs  vault_crypto.rs  vault_files.rs  watcher.rs  xmp.rs
