[package]
name = "retina-tag"
version = "1.2.0"
description = "AI-powered photo library tagger with smart multi-provider routing"
authors = ["RetinaTag"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "retina_tag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
csv = "1.3"
kamadak-exif = "0.5"
opener = "0.7"
tract-onnx = "0.21"
zip = { version = "2", default-features = false, features = ["deflate"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "directml"] }
ndarray = "0.17"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
