[package]
name = "retina-tag"
version = "1.5.111"
description = "AI-powered photo library tagger with smart multi-provider routing"
authors = ["RetinaTag"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "retina_tag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
image = "0.25"
# v1.5.58 — Embed XMP metadata directly into JPEG files (APP1 segment).
# Pure-Rust segment manipulation: read SOI/APP markers, drop existing
# XMP APP1, insert fresh one. Atomic temp-then-rename keeps the
# original safe if the write is interrupted.
img-parts = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
csv = "1.3"
kamadak-exif = "0.5"
opener = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "directml"] }
ndarray = "0.17"
unicode-normalization = "0.1"
# rayon is already a transitive dep via image/ndarray — exposing it directly
# lets us parallelize CPU-bound hashing/blur work without the overhead of
# managing raw threads.
rayon = "1.10"
# Fast non-crypto 128-bit hash for photo dedup. xxh3 is ~20× faster than
# SHA-256 on the scan hot path and plenty collision-resistant for the
# file-identity use case (library-scale corpus). Still prefixed "xxh3:" in
# the DB so pre-existing SHA-256 hashes from older scans keep working.
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# `dirs` gives us cross-platform Pictures/Documents paths for auto-import.
dirs = "5"
tauri-plugin-drag = "2.1"
tauri-plugin-notification = "2"

# v1.5.104 — XMP sidecar reading. Mac side writes .xmp files alongside
# photos on the shared volume; Windows scan never imported them so
# cross-machine tags never appeared. quick-xml is the minimal,
# pull-parser-based XML lib (no DOM allocation, ~1.5 MB compiled).
quick-xml = "0.36"

# v1.5.63 — Vault Faz 2 hardening.
# bip39: 24-word recovery mnemonic so a forgotten PIN doesn't mean total
#        data loss. We do NOT email recovery codes — that's an anti-pattern;
#        the user holds the words.
# argon2 + aes-gcm: foundation for encrypted thumbnails. The crates are
#        wired up now so the v1.5.64 thumbnail-encryption migration can
#        land without another dependency bump.
bip39 = "2"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
tauri-plugin-single-instance = "2.4.2"

# MTP (Media Transfer Protocol) support for iPhone / Android import.
# Only pulled in on Windows because MTP on macOS/Linux uses entirely
# different APIs (libmtp / libimobiledevice) and we don't currently ship
# there anyway.
# v1.5.64 — Faz 2.3 Windows Hello biometric unlock.
#   Security_Credentials_UI: UserConsentVerifier (the official Windows
#   Hello gate — fingerprint, face, PIN — surfaced through WinRT).
#   Win32_Security_Cryptography: CryptProtectData/CryptUnprotectData
#   (DPAPI). Wraps the KEK with a key bound to the current Windows
#   user account, so the bio_blob is useless on another machine or
#   under another user even with disk access.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_Devices_PortableDevices",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_EnhancedStorage",
    "Security_Credentials_UI",
    "Foundation",
    "Win32_Security_Cryptography",
] }
windows-core = "0.58"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
# Optimize for speed, not size. The image decode/resize hot path dominates
# thumbnail generation and tagging, and `opt-level = 3` gives the autovectorizer
# room to work on RGBA inner loops. Trades a few MB of binary size for a
# measurable (~20-40%) speedup on CPU-bound paths.
opt-level = 3
strip = true
